# librus-api

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  structs.rs
src/structs/: events.rs  grades.rs  lessons.rs  me.rs  timetable.rs  users.rs
testapi/: Cargo.toml
testapi/src/: main.rs  test_menu.rs  test_tables.rs  test_tables_one.rs
