[package]
name = "librus-api"
version = "1.0.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls", "cookies", "stream"]}
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.190", features = ["derive"] }
easycookie = "1.0.2"
serde_json = "1.0.108"
