[package]
name = "testapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "7.1.0"
serde_json = "1.0.108"
termion = "2.0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.librus-api]
path = ".."
